--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header id="0">
         <nav>
             <a href="#1">1</a>
             <a href="#2">2</a>
@@ -17,19 +17,23 @@
         </nav>
     </header>
     <h2 id="1">1</h2>
+    <h2 href="#0">🎚</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <h2 id="2">2</h2>
+    <h2 href="#0">🎚</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <h2 id="3">3</h2>
+    <h2 href="#0">🎚</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <h2 id="4">4</h2>
+    <h2 href="#0">🎚</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
@@ -38,11 +42,14 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <h2 id="5">5</h2>
+    <h2 href="#0">🎚</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda ipsum magni dicta ipsam nihil fugiat obcaecati illo. Laboriosam, earum repellat? Dolore in velit tempora praesentium quo quod ipsam totam.</p>
 
-<footer></footer>
+    <footer>
+      <img src="subir.jpg" alt="Subir arriba" href="#0">
+    </footer>
 
 </body>
 </html>
