Puesta ruta relativa imagen

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <footer>
         <a href="#0">
-      <img src="subir.jpg" alt="Subir arriba" >
+      <img src="\subir.jpg" alt="Subir arriba" >
         </a>
     </footer>
 
